Rearranged ordering, since parse errors resulted in the Blocpocalypse when Web results came out. Also added link to github source

--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
       </div>
 
       <footer class="grid grid-16">
-        Built for Chrome/Safari using: <a href="http://zeptojs.com">Zepto.js</a>, <a href="http://csswizardry.com/inuitcss/">inuit.css</a>, <a href="http://simplehtmldom.sourceforge.net/">Simple HTML DOM</a><br>
-        Results scraped from <a href="http://enr.elections.ca/Provinces_e.aspx">Elections Canada's recap page</a>.<br>
-        Automatically refreshes every 30 seconds.<br>
+        <p>
+          Results scraped from <a href="http://enr.elections.ca/Provinces_e.aspx">Elections Canada's recap page</a>.<br>
+          Automatically refreshes every 30 seconds.
+        </p>
+        <p>
+          Built for Chrome/Safari using: <a href="http://zeptojs.com">Zepto.js</a>, <a href="http://csswizardry.com/inuitcss/">inuit.css</a>, <a href="http://simplehtmldom.sourceforge.net/">Simple HTML DOM</a> - <a href="https://github.com/Sakurina/elections">source code @ github</a>
+        </p>
       </footer>
     </div>
     <script src='http://www.google-analytics.com/urchin.js' type='text/javascript'></script>
